<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MostrastatsActivity" >

    <LinearLayout
        android:id="@+id/display_nametype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/display_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:src="@drawable/pokeball" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.60"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/display_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/display_type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher" />

                <ImageView
                    android:id="@+id/display_type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/displaytext_hp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/displaynumberhp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/stats_hp_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/barrahp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_atk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/displaytext_atk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/displaynumberatk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/stats_atk_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/barraatk" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_def"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/displaytext_def"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/displaynumberdef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/stats_def_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/barradef" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_spatk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/displaytext_spatk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/displaynumberspatk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/stats_spatk_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/barraspatk" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_spdef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/displaytext_spdef"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/displaynumberspdef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/stats_spdef_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/barraspdef" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/displaytext_speed"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/displaynumberspe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/stats_spe_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/barraspe" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/displaytext_total"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/displaynumbertotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/stats_total_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/barratotal" />
    </LinearLayout>

</LinearLayout>